--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
@@ -21,7 +21,7 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "next": "^14.0.0",
-    "next-auth": "^4.24.4",
+    "next-auth": "^4.18.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
