--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "i18next": "^23.7.16",
     "next": "^14.0.0",
     "next-auth": "^4.18.6",
+    "next-i18next": "^15.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.0.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
