--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,21 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
 # When adding additional environment variables, the schema in "/src/env.mjs"
 # should be updated accordingly.
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL=
-
+DATABASE_URL=mysql://rtbgb05getdoqvrv07ac:pscale_pw_BJ0bFcu0N2CpD0MY5lwkUGg3jvoxkr9ewFiwObl2yhz@aws.connect.psdb.cloud/retail-t3?sslaccept=strict
 # Next Auth
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
 # https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
+NEXTAUTH_SECRET=uCmyQnbN5TXjKZkdoa8KGkc4R9UJ3aVNvN3fPJ/o4oY=
 NEXTAUTH_URL=http://localhost:3000
 
 # Next Auth GITHUB Provider
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_ID=f75fd26e7ee7d02b3b35
+GITHUB_CLIENT_SECRET=f7f3eb3a716a9b359c10f940f8c031510b62a757
+
+JWT_SECRET=3ikaqElNq+bW3janQFI71VBeBH6f+SmnPal9phVwQKQ=
+
+# Google API
+NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyAJcuH4rlc-gCQHY61b3_XCJSx3xMt6gWk
