--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Next.js: debug server-side",
       "type": "node-terminal",
       "request": "launch",
-      "command": "bun run dev"
+      "command": "npm run dev"
     },
     {
       "name": "Next.js: debug client-side",
@@ -17,21 +17,21 @@
       "name": "Next.js: debug full stack",
       "type": "node-terminal",
       "request": "launch",
-      "command": "bun run dev",
+      "command": "npm run dev",
       "serverReadyAction": {
         "pattern": "started server on .+, url: (https?://.+)",
         "uriFormat": "%s",
         "action": "debugWithChrome"
-      },
+      }
     },
     {
-        "name": "Attach",
-        "address": "127.0.0.1",
-        "port": 9230,
-        "request": "attach",
-        // "localRoot": "${workspaceFolder}/frontend", # just if next app is not inside your root dir
-        "skipFiles": ["<node_internals>/**"],
-        "type": "node"
-      }
+      "name": "Attach",
+      "address": "127.0.0.1",
+      "port": 9230,
+      "request": "attach",
+      // "localRoot": "${workspaceFolder}/frontend", # just if next app is not inside your root dir
+      "skipFiles": ["<node_internals>/**"],
+      "type": "node"
+    }
   ]
 }
