--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,10 @@
 {
   "compilerOptions": {
-    "types": [
-      "bun-types",
-      "web"
-    ],
+    "types": ["bun-types", "web"],
     /* Base Options: */
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "lib": [
-      "esnext"
-    ],
+    "lib": ["esnext"],
     "target": "esnext",
     "allowJs": true,
     "isolatedModules": true,
@@ -20,7 +15,7 @@
     /* Bundled projects */
     "noEmit": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "jsx": "preserve",
     "plugins": [
       {
@@ -31,9 +26,7 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "./src/*"
-      ]
+      "~/*": ["./src/*"]
     },
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true
@@ -45,9 +38,8 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.mjs",
-    ".next/types/**/*.ts"
-, "next-i18next.config.mjs"  ],
-  "exclude": [
-    "node_modules"
-  ]
+    ".next/types/**/*.ts",
+    "next-i18next.config.mjs"
+  ],
+  "exclude": ["node_modules"]
 }
